Fixed stupid white space and added pictures to possibly put for my second page :)

--- a/css/main.css
+++ b/css/main.css
@@ -1,39 +1,32 @@
-html, body {
- 	/*padding: 0;
- 	margin: 0;*/
- 	background: url("../img/razer.jpg") no-repeat center fixed;
+html,body,#page-one, #page-two {
+ 	padding: 0;
+ 	margin: 0;
+ 	height: 100%;
+	font-family: 'Share Tech', sans-serif;
+}
+
+#page-one{
+	background: url("../img/razer.jpg") no-repeat center fixed;
  	background-position: 100% 0%;
-	/*font-family: 'Share Tech', sans-serif;*/
-}
-/*#container{
-	width:960px;
-	margin:0px auto;
+
 }
 
-#left-column{
-	width:700px;
-	float:left;
-	background:blue;
+#page-two{
+	background: url("../img/braum.png")center fixed;
 }
 
-#right-column{
-	width:260px;
-	float:left;
-	background:orange;
-}*/
 .demo_container {width:980px; margin:0 auto; }
-#demo_top_wrapper { margin: 0 0 20px 0; }
-#demo_top { height:100px; padding:20px 0 0 0; }
-/*#my_logo { font-family: 'Share Tech', sans-serif; } */
+#demo_top_wrapper { margin: 0 0 -75px 0; }
+#demo_top { height:100px; padding:20px 0 0 0; }*/
 /* our menu styles */
 #sticky_navigation_wrapper { width: 100%; height: 75px; }
 #sticky_navigation { width: 100%; height: 75px; background:rgba(60,60,60, .7); -moz-box shadow: 0 0 5px #999; -webkit-box-shadow: 0 0 5px #999; }
 #sticky_navigation ul { list-style:none; margin:0; padding:10px; }
 #sticky_navigation ul li { margin:0; padding:0; display:inline;}
 #sticky_navigation ul li a { display: block; float:left; margin:0 0 0 5px; padding:0 20px; height:55px; line-height:55px; font-size:14px; font-family: 'Share Tech', sans-serif; font-weight:bold; color:#333; background:#333; -moz-border-radius:3px; -webkit-border-radius:3px; border-radius:3px; }
-#sticky_navigation ul li a:hover, #sticky_navigation ul li a.selected {color:#fff; background:#111;}
+#sticky_navigation ul li a:hover, #sticky_navigation ul li a.selected {color:#fff; background:#111;} 
 
-/*@media screen and (max-width:959px) {
+@media screen and (max-width:320px) {
 	#container{
 		width:100%;
 	}
@@ -43,5 +36,5 @@ html, body {
 	#right-column{
 		width:30%;
 	}
-}*/
+}
 
